# pyutils

./: .gitignore  pyproject.toml  readme.md
notebooks/: analysis.ipynb  arima.ipynb  blanchard-khan.ipynb  buiter.ipynb  differential.ipynb  dsolve.ipynb  fixest.ipynb  kfe.ipynb  sparse.ipynb  stata.ipynb
src/pyutils/analysis/: __init__.py  main.py  tseries.py
src/pyutils/econometrics/r/: __init__.py  converters.py  fixest.py
src/pyutils/econometrics/stata/: __init__.py  main.py
src/pyutils/econometrics/timeseries/: cir.py
src/pyutils/jax/: __init__.py
src/pyutils/jax/buiter/: __init__.py  buiter.py
src/pyutils/jax/chebyshev/: main.py
src/pyutils/jax/differential/: __init__.py  differential.py  sparse.py  stencils_1d.py
src/pyutils/jax/distributions/: distributions.py
src/pyutils/jax/dsolve/: __init__.py  blanchard_khan.py  klein.py  klein_old.py
src/pyutils/jax/klein/: __init__.py  klein.py
src/pyutils/jax/loaders/: loaders.py
src/pyutils/jax/solvers/: __init__.py  newton.py  root_scalar.py
src/pyutils/numerical/: optimize.py
src/pyutils/parallel/: main.py
src/pyutils/wrappers/: wrappers.py
wrappers/: wrappers.py
