[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.1.0"
description = "Python utilities"
authors = [{ name = "Marc de la Barrera" }]
requires-python = ">=3.11"
dependencies = ["jax (>=0.7.1,<0.9.0)", "matplotlib (>=3.10.6,<4.0.0)", "rpy2 (>=3.6.4,<4.0.0)", "pandas (>=2.3.3,<3.0.0)", "statsmodels (>=0.14.5,<0.15.0)", "pystata (>=0.0.1,<0.0.2)"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

